# memaster

./: .gitignore  README.md  pubspec.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
docs/: distribution.md  local-ai-api.md  mvp-architecture.md  product-strategy.md  roadmap.md  ui-direction.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/data/: memory_repository.dart  mock_memory_data.dart
lib/core/models/: app_models.dart
lib/core/network/: local_api_client.dart
lib/core/services/: local_service_runtime.dart
lib/core/theme/: app_colors.dart  app_theme.dart
lib/core/widgets/: album_card.dart  app_window_frame.dart  async_content.dart  glass_card.dart  person_tile.dart  section_title.dart  stat_chip.dart
lib/core/window/: window_frame_support.dart
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: build-macos-distribution.sh  restart-stack.sh  start-backend.sh  start-frontend.sh  start-stack.sh  status-stack.sh
service/: README.md  pyproject.toml
service/app/: main.py
service/app/api/: routes.py
service/app/core/: data.py  database.py  settings.py
service/app/schemas/: models.py
service/app/services/: indexer.py  repository.py  thumbnailer.py
service/tests/: test_api.py
test/: page_interactions_test.dart  screenshots_test.dart  widget_test.dart
(+13 files in other folders)
