[project]
name = "memaster-service"
version = "0.1.0"
description = "Local AI service for intelligent NAS memories."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
